traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:36: error: ';' expected but 'else' found.
  else {
  ^TraversalDiagonal:43: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:46: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:49: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:52: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:55: error: Unmatched closing brace '}' ignored here
}
^